# electronics-testbench-control

./: .gitignore  README.md  keithley_2110.py  measure_current.py  pyproject.toml  rigol_DM3058E.py  rigol_m300.py  siglent_SPD1305X.py  spd1305-module-test.py
doc/: Rigol_DM3058_SCPI_Commands_1.txt  Rigol_DM3058_SCPI_Commands_2.txt  Rigol_DM3058_SCPI_Commands_3.txt  Rigol_DS1000Z_SCPI_Commands.txt
examples/: list_devices.py  measure_current.py  spd1305_driver_test.py  spd1305_psu_iv_get_set.py  test_b2902b_connection.py
install/: 99-visa.rules  setup_system.sh
lib/: requirements.txt  siglent_SPD3303X.py
src/testbench/: __init__.py
src/testbench/cli/: main.py
src/testbench/core/: scpi.py
src/testbench/dmm/: keithley_2110.py  rigol_dm3058e.py
src/testbench/domains/: daq.py  dmm.py  psu.py  scope.py  sourcemeter.py
src/testbench/psu/: siglent_spd1305x.py  siglent_spd3303x.py
src/testbench/sourcemeter/: keysight_b2902b.py
test/: dm3058e-args-test.ps1  spd1305-args-test.ps1
